final code/files commit

--- a/main.ipynb
+++ b/main.ipynb
@@ -214,7 +214,6 @@
    "source": [
     "# Using the read_csv function and Path module, create a DataFrame \n",
     "# by importing the sfo_neighborhoods_census_data.csv file from the Resources folder\n",
-    "# sfo_data_df = pd.read_csv(r'C:\\Users\\minha\\OneDrive\\Documents\\Housing_Rental_Analysis\\Resources\\sfo_neighborhoods_census_data.csv')\n",
     "sfo_data_df = pd.read_csv(\n",
     "    Path('Resources\\sfo_neighborhoods_census_data.csv')\n",
     ")\n",
@@ -467,7 +466,7 @@
     "**Question:** What is the overall trend in housing_units over the period being analyzed?\n",
     "\n",
     "**Answer:** \n",
-    "* Housing units are steadily increasing year-by-year indicating high demand in the market. "
+    "* According to the bar chart above, housing units are steadily increasing year-by-year indicating high demand in the market. "
    ]
   },
   {
